# emsdk-node

./: .gitignore  CMakeLists.txt  README.md  call-hello-cpp-wasm.js  call-hello-cpp.js  call-hello.js  package-lock.json  package.json  webcomponets.html
cmake-asmjs/: CMakeLists.txt
cmake-wasm/: CMakeLists.txt
my-project/: README.md  index.html  package-lock.json  package.json  webpack.config.js
my-project/src/: App.vue  main.js
src/: hello-func-wasm.cpp  hello-func.c  hello-func.cpp
tmp/pwa_webcomponents_webassembly/: code39-barcode.html  code39.js  index.html  readme.txt
tmp/pwa_webcomponents_webassembly/src/: code39.cpp
